# pydecorrelation-stretch

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  build.py  pyproject.toml  pyright_report.txt  pyright_report_2.txt  pyright_report_v3.txt  requirements.txt  ruff_report.txt  validation.py
.github/workflows/: ci.yml  dependabot.yml  release.yml
examples/: basic_usage.py
src/dstretch/: __init__.py  cli.py  color_balance_processor.py  colorspaces.py  decorrelation.py  exact_matrices.py  flatten_processor.py  gui.py  gui_infrastructure.py  independent_processors.py  io_utils.py  pipeline.py  pixel_inspector.py  streaming.py
src/pydecorrelation_stretch/: __init__.py  auto_contrast_processor.py  cli.py  color_balance_processor.py  colorspaces.py  decorrelation.py  flatten_processor.py  gui.py  independent_processors.py  invert_processor.py  io_utils.py  numba_utils.py  pixel_inspector.py  streaming.py  zoom_pan_controller.py
tests/: test_cli_logic.py  test_colorspaces.py  test_decorrelation.py  test_independent_processors.py  test_pipeline.py
